src/styles/landingPage.css
.home-page {
  /* background-color: rgba(54, 182, 252, 0.2); */
  height: 100vh;
}

.home-page p {
  /* background-color: rgba(54, 182, 252, 0.2); */
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 1.3em;
  font-weight: 500;
}

.home-banner {
  height: 350px;
  max-width: 95%;
  margin: auto;
  /* background-image: url("https://www.quickstartfitness.com.au/wp-content/uploads/2017/11/banner.jpg"); */
  /* background-image: url("../assets/images/winter_workout_heading.gif"); */
  /* background-position: center; */
  /* background-size: cover;
  background-repeat: none;
  background-position-x: center; */
  
}


img.home-banner-image {
  width: 100%;
  height: 100%;
}

.home-header {
  line-height: 300px;
}


.nav-bar {
  height: 60px;
  line-height: 60px;
  max-width: 95%;
  margin: auto;
  background-color: rgba(54, 182, 252, 0.5);
}

ul.nav-bar li {
  padding: 0px 30px;
  display: inline-block;
}

ul.nav-bar li a {
  text-decoration: none;
  color: black;
  font-size: 1.5em;
  font-weight: bolder;
}

ul.nav-bar li:hover {
  background-color: rgba(255,255,255,0.3);
  transition: 0.5s;
}

.home-intro {
  margin: 0px auto 40px;
  border-radius: 0px 0px 15px 15px;
  padding: 30px;
  width: 95%;
  background-color: rgba(54, 182, 252, 0.5)
}

.rules-header {
  max-height: 200px;
  /* border: 1px solid black; */
  width: 75%;
  margin: 10px auto;
  background-color: rgba(54, 182, 252, 0.1); 
  /* border: 3px solid rgba(54, 182, 252, 0.3); */
  border-radius: 15px;
}


.home-rules {
  width: 75%;
  margin: 10px auto;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: repeat(12, 1fr);
  grid-column-gap: 5px;
  grid-row-gap: 10px;
  }


  
  
  .div1 { grid-area: 1 / 1 / 3 / 8;  padding: 10px; background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  .div2 { grid-area: 1 / 8 / 2 / 13; padding: 10px;  position: relative;}
  .div3 { grid-area: 2 / 8 / 4 / 13; padding: 10px; background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  .div4 { grid-area: 3 / 1 / 4 / 8;  padding: 10px; position: relative;}
  .div5 { grid-area: 4 / 1 / 6 / 8;  padding: 10px; background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  .div6 { grid-area: 4 / 8 / 5 / 13; padding: 10px; position: relative;}
  .div7 { grid-area: 5 / 8 / 7 / 13; padding: 10px; background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  .div8 { grid-area: 6 / 1 / 7 / 8;  padding: 10px; position: relative;}
  .div9 { grid-area: 7 / 1 / 9 / 7;  padding: 10px; background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  .div10 { grid-area: 7 / 7 / 8 / 13; padding: 10px; position: relative;}
  .div11 { grid-area: 8 / 7 / 10 / 13; padding: 10px;  background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  .div12 { grid-area: 9 / 1 / 10 / 7; padding: 10px; position: relative;}
  .div13 { grid-area: 10 / 1 / 12 / 9; padding: 10px;  background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  .div14 { grid-area: 10 / 9 / 11 / 13; padding: 10px; position: relative;}
  .div15 { grid-area: 11 / 9 / 13 / 13; padding: 10px; background-color: rgba(54, 182, 252, 0.1); border: 3px solid rgba(54, 182, 252, 0.4); border-radius: 15px;}
  


  .arrow-grid {
    max-height: 200px;
  }

  .arrow {
    height: 100%;
    width: 60%;
  }

  .arrow-right {
    position: absolute;
    left: 0
    ;
  }
  .arrow-left {
    position: absolute;
    right: 0;
  }
  
  .arrow-down-left {
    height: auto;
    margin-right: 15%;
  }

  /* .site-contacts {
    width: 95%;
    margin: 50px auto;
    padding: 20px;
    background-color:rgba(249, 7, 7, 0.1);
    border: 1px solid rgba(249, 7, 7, 0.4);
    border-radius: 15px;
  } */
  
  /* .site-disclaimer {
    width: 95%;
    margin: 50px auto;
    padding: 20px;
    background-color:rgba(249, 7, 7, 0.1);
    border: 1px solid rgba(249, 7, 7, 0.4);
    border-radius: 15px;
  } */
  
  .site-contacts {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(12, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    /* max-height: 500px; */
    border-radius: 15px;
    width: 95%;
    margin: 50px auto;
    padding: 20px;
  }
    
    .contacts-header { 
      grid-area: 1 / 1 / 3 / 13; 
      background-color: rgba(54, 182, 252, 0.4);
      padding: 15px;
    }
    .contacts-umpire { 
      grid-area: 3 / 1 / 13 / 7; 
      padding: 20px;
      background-color: rgba(54, 182, 252, 0.1); 
      border: 3px solid rgba(54, 182, 252, 0.4);
    }
    .contacts-tech-support { 
      grid-area: 3 / 7 / 13 / 13; 
      /* width: 95%; */
      /* margin: 50px auto; */
      padding: 20px;
      background-color:rgba(249, 7, 7, 0.1);
      border: 3px solid rgba(249, 7, 7, 0.4);
      /* border-radius: 15px; */
    }

  .home-icon {
    max-width: 150px;
    max-height: 100px;
    /* border: 1px solid black; */
  }

/* Viewing Homepage on mobile */

  @media only screen and (max-width: 768px) {
    /* For mobile phones: */
  .home-rules {
      display: grid;
      grid-template-columns: repeat(12, 1fr);
      grid-template-rows: repeat(8, 1fr);
      grid-column-gap: 0px;
      grid-row-gap: 0px;
      }

    .div1-mobile { grid-area: 1 / 1 / 2 / 13; margin: 5px;}
    .div2 { display: none;}
    .div3-mobile { grid-area: 2 / 1 / 3 / 13; margin: 5px;}
    .div4 { display: none;}
    .div5-mobile { grid-area: 3 / 1 / 4 / 13; margin: 5px;}
    .div6 { display: none;}
    .div7-mobile { grid-area: 4 / 1 / 5 / 13; margin: 5px;}
    .div8 { display: none;}
    .div9-mobile { grid-area: 5 / 1 / 6 / 13; margin: 5px;}
    .div10 { display: none;}
    .div11-mobile { grid-area: 6 / 1 / 7 / 13; margin: 5px;}
    .div12 { display: none;}
    .div13-mobile { grid-area: 7 / 1 / 8 / 13; margin: 5px;}
    .div14 { display: none;}
    .div15-mobile { grid-area: 8 / 1 / 9 / 13; margin: 5px;}


    .site-contacts  {
      display: grid;
      grid-template-columns: repeat(5, 1fr);
      grid-template-rows: repeat(11, 1fr);
      grid-column-gap: 0px;
      grid-row-gap: 0px;
      }

    .contacts-header { 
      grid-area: 1 / 1 / 2 / 6; 
      background-color: rgba(54, 182, 252, 0.4);
      padding: 15px;
    }

    .contacts-umpire { 
      grid-area: 2 / 1 / 7 / 6; 
      padding: 20px;
      background-color: rgba(54, 182, 252, 0.1); 
      border: 3px solid rgba(54, 182, 252, 0.4);
    }
    
    .contacts-tech-support { 
      grid-area: 7 / 1 / 12 / 6; 
      padding: 20px;
      background-color:rgba(249, 7, 7, 0.1);
      border: 3px solid rgba(249, 7, 7, 0.4);
    }
    
  }

